removing unused .meta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     {
         "**/.DS_Store":true,
         "**/.git":true,
+        "**/.gitkeep":true,
         "**/.gitignore":false,
         "**/.gitmodules":true,
         "**/*.booproj":true,
