Preload Scene for instancing Singletons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,9 +41,9 @@
         "**/*.cubemap":true,
         "**/*.flare":true,
         "**/*.mat":true,
-        "**/*.meta":true,
+        "**/*.meta":false,
         "**/*.prefab":true,
-        "**/*.unity":true,
+        "**/*.unity":false,
         "build/":true,
         "Build/":true,
         "Library/":true,
